--- a/src/index.html
+++ b/src/index.html
@@ -2,37 +2,60 @@
 <html>
   <head lang='en'>
     <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width;initial-scale=1;maximum-scale=1;minimum-scale=1'>
-    <title>Basic Frontend Boilerplate</title>
+    <title>Twitter Shadowban Test</title>
+    <meta description="Determine wether a Twitter user is shadow banned">
+    <meta name="keywords" content="Twitter, Shadowban, Shadowbanned, Ban, Block, Quality Filter">
+    <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1'>
+    <link rel="icon" type="image/png" href="favicon.png" />
+    
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import Google Roboto Font-->
+    <!--Import Fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="vendor/materialize/css/materialize{{useMinified}}.css"  media="screen,projection"/>
-
-    <style>
-      body {
-        font-family: Roboto, 'Helvetica Neue', Arial, sans-serif;
-        color: #333;
-        font-weight: 300;
-      }
-    </style>
+    <!-- Custom -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <section class="row header">
         <div class="col s12">
-          <img src="img/header.png" alt="Basic Frontend Boilerplate" />
+          <h2>Is <span class="header-screen_name">@username</span><br> shadowbanned on Twitter?</h2>
+        </div>
+      </section>
+
+      <section class="row">
+        <form class="col s12 m5 controls">
+          <div class="card-panel right-align">
+            <div class="input-field">
+              <span class="prefix">@</span>
+              <input id="screenName" type="text" class="validate">
+              <label for="screenName">Username</label>
+            </div>
+            <a class="waves-effect waves white btn blue-text text-darken-2">Check</a>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <footer>
+      <div class="row">
+        <div class="col offset-s2 s8">
+          No copyright 2016 <a href="https://twitter.com/xho">@xho</a> - v. 1.0 beta
+          <br>
+          Source code is <a href="https://github.com/xho/Simple-Twitter-Shadowban-Checker" target="_blank">public on Github</a>
         </div>
       </div>
       <div class="row">
-        <div class="col s12">
-          <p>Something, something...</p>
+        <div class="col offset-s2 s8">
+          <p>Note 1: this app crawls and scans the search page on Twitter's web site, do not abuse.</p>
+          <p>Note 2: no cookies used for any purpose, so fuck off the privacy disclaimer and all that stuff.</p>
         </div>
       </div>
-    </div>
-    <!--JavaScript at end of body for optimized loading-->
+    </footer>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="vendor/materialize/js/materialize{{useMinified}}.js"></script>
     <script src='js/main.bundle.js'></script>
   </body>
