Add: screenName validation pattern

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
           <div class="card-panel right-align">
             <div class="input-field">
               <span class="prefix">@</span>
-              <input id="screenName" type="text" class="validate">
+              <input id="screenName" type="text" autocomplete="username" pattern="^(?:@)?([A-Za-z0-9_]){1,15}$" class="validate">
               <label for="screenName">Username</label>
             </div>
             <a class="waves-effect waves white btn blue-text text-darken-2">Check</a>
