Change: more twitter like buttons

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
               </div>
             </div>
             <div class="col s2">
-              <a class="waves-effect waves white btn">Check</a>
+              <a class="waves-effect waves white btn btn-flat">Check</a>
             </div>
           </form>
         </div>
