Add: updateTask for next step

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
                   </div>
                 </li>
                 <li>
-                  <div class="collapsible-header" data-task-id="checkBan">
+                  <div class="collapsible-header" data-task-id="checkQF">
                     <i class="material-icons">access_time</i>
                     <span class="task-message">#QualityFilter</span>
                   </div>
