Add: QF testing with async/await loop

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
               <div class="input-field">
                 <span class="prefix">@</span>
                 <input
+                  value="Netzdenunziant"
                   id="screenName"
                   type="text"
                   autocomplete="username"
