Rework: Major rework, read commit description! +
  Turns out searching for hashtags and all that jazz is waaaay
  to buggy for a quick fix. Thus opting for filter:images
  approach:

  - get image tweet for user,
  - try to find image's URL in 'latest' feed,
  - done.

--- a/src/index.html
+++ b/src/index.html
@@ -51,15 +51,15 @@
             <div class="collapsible-body results">
               <ul id="tasks">
                 <li>
-                  <div class="collapsible-header" data-task-id="getTweets">
+                  <div class="collapsible-header" data-task-id="getRefTweet">
                     <i class="material-icons gears"></i>
-                    <span class="task-message">Loading tweets...</span>
+                    <span class="task-message">Getting reference tweet...</span>
                   </div>
                 </li>
                 <li>
-                  <div class="collapsible-header" data-task-id="checkQF">
+                  <div class="collapsible-header" data-task-id="checkRefTweet">
                     <i class="material-icons">access_time</i>
-                    <span class="task-message">#QualityFilter</span>
+                    <span class="task-message">Waiting for reference tweet.</span>
                   </div>
                 </li>
               </ul>
