--- a/src/index.html
+++ b/src/index.html
@@ -72,16 +72,12 @@
 
     <footer class="section">
       <div class="row">
-        <div class="col offset-s2 s8">
-          No copyright 2016 <a href="https://twitter.com/xho">@xho</a> - v. 1.0 beta
-          <br>
-          Source code is <a href="https://github.com/xho/Simple-Twitter-Shadowban-Checker" target="_blank">public on Github</a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col offset-s2 s8">
-          <p>Note 1: this app crawls and scans the search page on Twitter's web site, do not abuse.</p>
-          <p>Note 2: no cookies used for any purpose, so fuck off the privacy disclaimer and all that stuff.</p>
+        <div class="col offset-s2 s8 center-align">
+          Source code is <a href="https://github.com/rbeer/TwitterShadowBanV2" target="_blank">public on Github</a>
+          <br />
+          No cookies, no tracking, screw NetzDG and GDPR!
+          <br />
+          <a href="https://twitter.com/Netzdenunziant" target="_blank">@Netzdenunziant</a> (research), <a href="https://twitter.com/raphaelbeerlin" target="_blank">@raphaelbeerlin</a> (implementation)
         </div>
       </div>
     </footer>
