--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,11 @@
               <div class="input-field">
                 <span class="prefix">@</span>
                 <input
-                  value="Netzdenunziant"
                   id="screenName"
                   type="text"
                   autocomplete="username"
                   required
-                  pattern="^(?:@)?([A-Za-z0-9_]){1,15}$"
+                  pattern="^(?!@)([A-Za-z0-9_]){1,15}$"
                   data-position="bottom"
                   data-tooltip="Please provide a valid Twitter @handle!"
                 >
