Change: button to actual <button> for easier locking +
  No need to do all that jazz on an <a>. Just disable/endable
  the <button> and read that value for <input> {Enter} events.

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                 <label for="screenName">Username</label>
               </div>
               <div>
-                <a id="check" class="waves-effect waves white btn btn-flat">Check</a>
+                <button id="check" class="waves-effect waves white btn btn-flat">Check</button>
               </div>
             </div>
             <div class="collapsible-body results">
