Add: check user existence, v1 shadowban test

--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,21 @@
             <div class="collapsible-body results">
               <ul id="tasks">
                 <li>
-                  <div class="collapsible-header" data-task-id="getRefTweet">
+                  <div class="collapsible-header" data-task-id="checkUser">
                     <i class="material-icons gears"></i>
-                    <span class="task-message">Getting reference tweet...</span>
+                    <span class="task-message">...</span>
+                  </div>
+                </li>
+                <li>
+                  <div class="collapsible-header" data-task-id="checkConventional">
+                    <i class="material-icons">access_time</i>
+                    <span class="task-message">Waiting for user.</span>
+                  </div>
+                </li>
+                <li>
+                  <div class="collapsible-header" data-task-id="getRefTweet">
+                    <i class="material-icons">access_time</i>
+                    <span class="task-message">Waiting for user.</span>
                   </div>
                 </li>
                 <li>
