Fix/Add: Unclear wording for QFD ban / QFD <abbr>, qfd-hint icon (#2)

--- a/src/index.html
+++ b/src/index.html
@@ -52,25 +52,33 @@
                 <li>
                   <div class="collapsible-header" data-task-id="checkUser">
                     <i class="material-icons gears"></i>
-                    <span class="task-message">...</span>
+                    <div class="task-message">
+                      <span>...</span>
+                    </div>
                   </div>
                 </li>
                 <li>
                   <div class="collapsible-header" data-task-id="checkConventional">
                     <i class="material-icons">access_time</i>
-                    <span class="task-message">Waiting for user.</span>
+                    <div class="task-message">
+                      <span>Waiting for user.</span>
+                    </div>
                   </div>
                 </li>
                 <li>
                   <div class="collapsible-header" data-task-id="getRefTweet">
                     <i class="material-icons">access_time</i>
-                    <span class="task-message">Waiting for user.</span>
+                    <div class="task-message">
+                      <span>Waiting for user.</span>
+                    </div>
                   </div>
                 </li>
                 <li>
                   <div class="collapsible-header" data-task-id="checkRefTweet">
                     <i class="material-icons">access_time</i>
-                    <span class="task-message">Waiting for reference tweet.</span>
+                    <div class="task-message">
+                      <span>Waiting for reference tweet.</span>
+                    </div>
                   </div>
                 </li>
               </ul>
