Fix load balancing (?) issue for conventional shadowban

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,7 @@
     <footer class="section">
       <div class="row">
         <div class="col offset-s2 s8 center-align">
+          This test is currently in an early development stage. The accuracy of results cannot be guaranteed.<br/>
           Source code is <a href="https://github.com/rbeer/TwitterShadowBanV2" target="_blank">public on Github</a>
           <br />
           No cookies, no tracking, screw NetzDG and GDPR!
