Differentiate between search ban and shadowban, increase transparency, improve UI task handling

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Twitter, Shadowban, Shadowbanned, Ban, Block, Quality Filter">
     <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1'>
     <link rel="icon" type="image/png" href="favicon.png" />
+    <base target="_blank">
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -54,6 +55,14 @@
                     <i class="material-icons gears"></i>
                     <div class="task-message">
                       <span>...</span>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="collapsible-header" data-task-id="checkSearch">
+                    <i class="material-icons">access_time</i>
+                    <div class="task-message">
+                      <span>Waiting for user.</span>
                     </div>
                   </div>
                 </li>
