Do not break icons when using translation helper

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
               <ul id="tasks">
                 <li>
                   <div class="collapsible-header" data-task-id="checkUser">
-                    <i class="material-icons gears"></i>
+                    <i class="material-icons gears notranslate"></i>
                     <div class="task-message">
                       <span>...</span>
                     </div>
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <div class="collapsible-header" data-task-id="checkSearch">
-                    <i class="material-icons">access_time</i>
+                    <i class="material-icons notranslate">access_time</i>
                     <div class="task-message">
                       <span>Waiting for user.</span>
                     </div>
@@ -68,7 +68,7 @@
                 </li>
                 <li>
                   <div class="collapsible-header" data-task-id="checkConventional">
-                    <i class="material-icons">access_time</i>
+                    <i class="material-icons notranslate">access_time</i>
                     <div class="task-message">
                       <span>Waiting for user.</span>
                     </div>
@@ -76,7 +76,7 @@
                 </li>
                 <li>
                   <div class="collapsible-header" data-task-id="getRefTweet">
-                    <i class="material-icons">access_time</i>
+                    <i class="material-icons notranslate">access_time</i>
                     <div class="task-message">
                       <span>Waiting for user.</span>
                     </div>
@@ -84,7 +84,7 @@
                 </li>
                 <li>
                   <div class="collapsible-header" data-task-id="checkRefTweet">
-                    <i class="material-icons">access_time</i>
+                    <i class="material-icons notranslate">access_time</i>
                     <div class="task-message">
                       <span>Waiting for reference tweet.</span>
                     </div>
