Add: social media meta and preview image

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,15 @@
     <meta charset='utf-8'>
     <title>Twitter Shadowban Test</title>
     <meta description="Determine wether a Twitter user is shadow banned">
-    <meta name="keywords" content="Twitter, Shadowban, Shadowbanned, Ban, Block, Quality Filter">
+    <meta name="keywords" content="Twitter, Shadowban, Shadowbanned, Ban, Block, Quality Filter, QFD">
     <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1'>
+    <meta property="og:title" content="Twitter Shadowban Test">
+    <meta property="og:description" content="Are you shadowbanned on Twitter?">
+    <meta property="og:image" content="https://www.shadowban.eu/sm_preview.png">
+    <meta property="og:url" content="https://www.shadowban.eu/">
+    <meta property="og:site_name" content="Twitter Shadowban Test">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image:alt" content="shadwoban.eu">
     <link rel="icon" type="image/png" href="favicon.png" />
     <base target="_blank">
 
