Add: devBanner when not in production

--- a/src/index.html
+++ b/src/index.html
@@ -117,6 +117,7 @@
         </div>
       </div>
     </footer>
+    {{devBanner}}
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="vendor/materialize/js/materialize{{useMinified}}.js"></script>
     <script src='js/main.bundle.js'></script>
