--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
                   pattern="^(?!@)([A-Za-z0-9_]){1,15}$"
                   data-position="bottom"
                   data-tooltip="Please provide a valid Twitter @handle!"
+                  maxlength="15"
                 >
                 <label for="screenName">Username</label>
               </div>
