--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
       </div>
     </footer>
     {{devBanner}}
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="vendor/materialize/js/materialize{{useMinified}}.js"></script>
     <script src='js/main.bundle.js'></script>
   </body>
