Change/Remove: simplify task messages / getRefTweet task

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
                     <div class="task-message">
                       <span><a href="#">Waiting</a> for user.</span>
                     </div>
-                    <div class="description-trigger">
+                    <div class="description-indicator">
                       <i class="material-icons notranslate">contact_support</i>
                     </div>
                   </div>
@@ -92,7 +92,7 @@
                     <div class="task-message">
                       <span>Waiting for user.</span>
                     </div>
-                    <div class="description-trigger">
+                    <div class="description-indicator">
                       <i class="material-icons notranslate">contact_support</i>
                     </div>
                   </div>
@@ -110,20 +110,12 @@
                   </div>
                 </li>
                 <li>
-                  <div class="collapsible-header" data-task-id="getRefTweet">
+                  <div class="collapsible-header" data-task-id="checkRefTweet">
                     <i class="material-icons notranslate">access_time</i>
                     <div class="task-message">
                       <span>Waiting for user.</span>
                     </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="collapsible-header" data-task-id="checkRefTweet">
-                    <i class="material-icons notranslate">access_time</i>
-                    <div class="task-message">
-                      <span>Waiting for reference tweet.</span>
-                    </div>
-                    <div class="description-trigger">
+                    <div class="description-indicator">
                       <i class="material-icons notranslate">contact_support</i>
                     </div>
                   </div>
