Change: descrition indicator color to back

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
                   <div class="collapsible-header" data-task-id="checkSearch">
                     <i class="material-icons notranslate">access_time</i>
                     <div class="task-message">
-                      <span><a href="#">Waiting</a> for user.</span>
+                      <span>Waiting for user.</span>
                     </div>
                     <div class="description-indicator">
                       <i class="material-icons notranslate">contact_support</i>
